[gd_scene load_steps=17 format=3 uid="uid://bcqncbvsts510"]

[ext_resource type="Script" path="res://main.gd" id="1_2qe3b"]
[ext_resource type="Script" path="res://game.gd" id="1_ijr72"]
[ext_resource type="Texture2D" uid="uid://bh02t06b74o6l" path="res://5 bar.png" id="2_dwokq"]
[ext_resource type="Script" path="res://main_game.gd" id="2_fe1u3"]
[ext_resource type="LabelSettings" uid="uid://ck5d0mk13armg" path="res://Jahr.tres" id="3_7m4li"]
[ext_resource type="Script" path="res://shop.gd" id="6_k607h"]
[ext_resource type="Script" path="res://shop_grafik.gd" id="7_du7b7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_41fkr"]
atlas = ExtResource("2_dwokq")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oihu5"]
atlas = ExtResource("2_dwokq")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m74mi"]
atlas = ExtResource("2_dwokq")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8e8vf"]
atlas = ExtResource("2_dwokq")
region = Rect2(96, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fsor"]
atlas = ExtResource("2_dwokq")
region = Rect2(128, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3sud"]
atlas = ExtResource("2_dwokq")
region = Rect2(160, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_e3btw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_41fkr")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oihu5")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m74mi")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8e8vf")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fsor")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3sud")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_ckxn4"]
font_size = 70
font_color = Color(0, 0, 0, 1)
shadow_size = 9
shadow_color = Color(0, 0, 0, 0.309)

[sub_resource type="LabelSettings" id="LabelSettings_8b1e5"]
font_size = 100
outline_size = 20
outline_color = Color(0, 0, 0, 0.514)

[node name="main" type="Node2D"]
script = ExtResource("1_2qe3b")

[node name="mainGame" type="Node2D" parent="."]
script = ExtResource("2_fe1u3")

[node name="Background2" type="ColorRect" parent="mainGame"]
offset_left = -800.0
offset_top = -450.0
offset_right = 800.0
offset_bottom = 450.0
color = Color(0.419813, 0.419813, 0.419813, 1)
metadata/_edit_use_anchors_ = true

[node name="Skip" type="Button" parent="mainGame"]
self_modulate = Color(1, 0, 0, 1)
offset_left = 228.0
offset_top = 216.0
offset_right = 612.0
offset_bottom = 324.0
text = "Sequenz überspringen
Weiter zum nächsten Shop"

[node name="Stats_UI" type="Node2D" parent="mainGame"]

[node name="Right" type="ColorRect" parent="mainGame/Stats_UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 174.0
offset_top = -386.0
offset_right = 674.0
offset_bottom = 414.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.693504, 0.868918, 0.474472, 1)
metadata/_edit_use_anchors_ = true

[node name="Zeit" type="ColorRect" parent="mainGame/Stats_UI"]
offset_left = 194.0
offset_top = -365.0
offset_right = 654.0
offset_bottom = -95.0
color = Color(0.52227, 0.762513, 0.952487, 1)
metadata/_edit_use_anchors_ = true

[node name="Money" type="ColorRect" parent="mainGame/Stats_UI"]
offset_left = 194.0
offset_top = -86.0
offset_right = 654.0
offset_bottom = 122.0
color = Color(0.838441, 0.626617, 0.747696, 1)
metadata/_edit_use_anchors_ = true

[node name="Teile2" type="ColorRect" parent="mainGame/Stats_UI"]
offset_left = 194.0
offset_top = 134.0
offset_right = 654.0
offset_bottom = 394.0
color = Color(0.906197, 0.585938, 0.179734, 1)
metadata/_edit_use_anchors_ = true

[node name="ProgressBar" type="Sprite2D" parent="mainGame/Stats_UI"]
texture_filter = 1
position = Vector2(424, -136)
scale = Vector2(15, 15)
texture = ExtResource("2_dwokq")
hframes = 6

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="mainGame/Stats_UI/ProgressBar"]
sprite_frames = SubResource("SpriteFrames_e3btw")
animation = &"3"

[node name="Jahr" type="Label" parent="mainGame/Stats_UI"]
texture_filter = 1
offset_left = 207.0
offset_top = -385.0
offset_right = 662.0
offset_bottom = -180.0
text = "Jahr  "
label_settings = ExtResource("3_7m4li")
metadata/_edit_use_anchors_ = true

[node name="Ziele" type="Label" parent="mainGame/Stats_UI"]
offset_left = 217.0
offset_top = -83.0
offset_right = 409.0
offset_bottom = 13.0
text = "Ziel :"
label_settings = SubResource("LabelSettings_ckxn4")
metadata/_edit_use_anchors_ = true

[node name="Geld" type="Label" parent="mainGame/Stats_UI"]
offset_left = 216.0
offset_top = 12.0
offset_right = 408.0
offset_bottom = 108.0
text = "Geld :"
label_settings = SubResource("LabelSettings_ckxn4")
metadata/_edit_use_anchors_ = true

[node name="Teile" type="Label" parent="mainGame/Stats_UI"]
offset_left = 217.0
offset_top = 126.0
offset_right = 637.0
offset_bottom = 222.0
text = "Teileanzahl :"
label_settings = SubResource("LabelSettings_ckxn4")
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="mainGame"]

[node name="Board" type="Node2D" parent="mainGame"]

[node name="Field" type="ColorRect" parent="mainGame/Board"]
offset_left = -725.0
offset_top = -425.0
offset_right = 125.0
offset_bottom = 425.0
color = Color(0.262932, 0.262932, 0.262932, 1)
metadata/_edit_use_anchors_ = true

[node name="Board" type="Node2D" parent="mainGame/Board/Field"]
texture_filter = 1
position = Vector2(725, 425)
script = ExtResource("1_ijr72")

[node name="shop" type="Node2D" parent="mainGame"]
script = ExtResource("6_k607h")

[node name="Field" type="ColorRect" parent="mainGame/shop"]
offset_left = -725.0
offset_top = -425.0
offset_right = 125.0
offset_bottom = 425.0
color = Color(0.401535, 0.197957, 0.123725, 1)
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="mainGame/shop"]
texture_filter = 1
offset_left = -379.0
offset_top = 316.0
offset_right = -336.0
offset_bottom = 347.0
scale = Vector2(3, 3)
text = "next"
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="mainGame/shop"]
offset_left = -696.0
offset_top = -260.0
offset_right = -445.0
offset_bottom = 119.0
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="mainGame/shop/ColorRect"]
layout_mode = 0
offset_left = 271.0
offset_right = 522.0
offset_bottom = 379.0
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="mainGame/shop/ColorRect/ColorRect"]
layout_mode = 0
offset_left = 268.0
offset_right = 519.0
offset_bottom = 379.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="mainGame/shop"]
offset_left = -423.0
offset_top = -416.0
offset_right = -181.0
offset_bottom = -279.0
text = "Shop"
label_settings = SubResource("LabelSettings_8b1e5")
metadata/_edit_use_anchors_ = true

[node name="Preise" type="Node2D" parent="mainGame/shop"]

[node name="erstes" type="Button" parent="mainGame/shop/Preise"]
offset_left = -689.0
offset_top = 136.0
offset_right = -450.0
offset_bottom = 286.0
metadata/_edit_use_anchors_ = true

[node name="drites" type="Button" parent="mainGame/shop/Preise"]
offset_left = -149.0
offset_top = 138.0
offset_right = 90.0
offset_bottom = 288.0
metadata/_edit_use_anchors_ = true

[node name="zweites" type="Button" parent="mainGame/shop/Preise"]
offset_left = -419.0
offset_top = 138.0
offset_right = -180.0
offset_bottom = 288.0
metadata/_edit_use_anchors_ = true

[node name="ShopGrafik" type="Node2D" parent="mainGame/shop"]
texture_filter = 1
script = ExtResource("7_du7b7")

[node name="Stats" type="Button" parent="mainGame"]
offset_left = 243.0
offset_top = -447.0
offset_right = 601.0
offset_bottom = -381.0
text = "Stats
"

[node name="menue" type="Node2D" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="menue"]
offset_left = -800.0
offset_top = -450.0
offset_right = 800.0
offset_bottom = 450.0

[node name="Button" type="Button" parent="menue"]
texture_filter = 1
offset_left = -230.0
offset_top = -160.0
offset_right = -184.0
offset_bottom = -129.0
scale = Vector2(10, 10)
text = "Start"

[connection signal="pressed" from="mainGame/Skip" to="." method="_on_skip_pressed"]
[connection signal="pressed" from="mainGame/shop/Button" to="mainGame" method="_on_button_pressed"]
[connection signal="pressed" from="mainGame/shop/Preise/erstes" to="mainGame/shop" method="_on_erstes_pressed"]
[connection signal="pressed" from="mainGame/shop/Preise/drites" to="mainGame/shop" method="_on_drites_pressed"]
[connection signal="pressed" from="mainGame/shop/Preise/zweites" to="mainGame/shop" method="_on_zweites_pressed"]
[connection signal="pressed" from="mainGame/Stats" to="." method="_on_stats_pressed"]
[connection signal="pressed" from="menue/Button" to="." method="_on_button_pressed"]
